--- a/index.html
+++ b/index.html
@@ -76,6 +76,16 @@
         </div>
     </section>
 
+    <section class="formacao" id="formacao" aria-label="Formação">
+        <div class="formacao-container">
+            <h2 class="subtitulo">Formação</h2>
+
+            <div>
+                <p class="formacao-texto">Minha mais recente experiência acadêmica foi o <strong> mestrado</strong>que fiz no exterior em <strong>UX Design</strong>. Além disso, me mantenho sempre atualizado com cursos intensivos online.</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
