--- a/index.html
+++ b/index.html
@@ -81,7 +81,40 @@
             <h2 class="subtitulo">Formação</h2>
 
             <div>
-                <p class="formacao-texto">Minha mais recente experiência acadêmica foi o <strong> mestrado</strong>que fiz no exterior em <strong>UX Design</strong>. Além disso, me mantenho sempre atualizado com cursos intensivos online.</p>
+                <p class="formacao-texto">Minha mais recente experiência acadêmica foi o <strong> mestrado</strong> que fiz no exterior em <strong>UX Design</strong>. Além disso, me mantenho sempre atualizado com cursos intensivos online.</p>
+                <ul class="faculdade-lista">
+                    <li class="faculdade">
+                        <span class="faculdade-tipo">Bacharel</span>
+                        <h3 class="faculdade-curso">Sistemas de Informação</h3>
+                        <span class="faculdade-instituicao">Faculdade Sapiens</span>
+                    </li>
+                    <li class="faculdade">
+                        <span class="faculdade-tipo">Bacharel</span>
+                        <h3 class="faculdade-curso">Sistemas de Informação</h3>
+                        <span class="faculdade-instituicao">Faculdade Sapiens</span>
+                    </li>
+                    <li class="faculdade">
+                        <span class="faculdade-tipo">Bacharel</span>
+                        <h3 class="faculdade-curso">Sistemas de Informação</h3>
+                        <span class="faculdade-instituicao">Faculdade Sapiens</span>
+                    </li>
+                </ul>
+
+                <div class="formacao-extra">
+                    <div class="cursos">
+                        <h3>Cursos Intensivos</h3>
+                        <ul>
+                            <li>UX/UI Design <span>56h</span></li>
+                            <li>Front End <span>72h</span></li>
+                        </ul>
+                    </div>
+                    <div class="idiomas">
+                        <h3>Idiomas</h3>
+                        <ul>
+                            <li>Ingles /<span> Básico</span></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
