--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul class="header-menu">
                 <li><a href="#experiencia">Experiência</a></li>
-                <li><a href="#contato">Formação</a></li>
+                <li><a href="#formacao">Formação</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
@@ -118,6 +118,18 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer" id="contato">
+        <div class="footer-container">
+            <p class="footer-texto">Estou em constante aprendizado.</p>
+            <ul class="footer-contato">
+                <li>renanlemos1612@gmail.com</li>
+                <li>LinkedIn</li>
+                <li>Instagram</li>
+            </ul>
+            <p class="footer-copy">Direitos reservados &copy;</p>
+        </div>
+    </footer>
 
 </body>
 
