--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Desenvolvedor Front End & UX/UI Designer">
     <link rel="stylesheet" href="css/style.css">
     <title>Renan Gabriel Lemos Araujo</title>
 </head>
@@ -123,9 +124,9 @@
         <div class="footer-container">
             <p class="footer-texto">Estou em constante aprendizado.</p>
             <ul class="footer-contato">
-                <li>renanlemos1612@gmail.com</li>
-                <li>LinkedIn</li>
-                <li>Instagram</li>
+                <li><img src="images/gmail.png" alt="Gmail" class="email"> renanlemos1612@gmail.com</li>
+                <li><img src="images/linkedin.png" alt="LinkedIn" class="linkedin"> LinkedIn</li>
+                <li><img src="images/instagram.png" alt="Instagram" class="instagram"><a href="https://instagram.com/renanleemos" target="_blank" rel="external">Instagram</a></li>
             </ul>
             <p class="footer-copy">Direitos reservados &copy;</p>
         </div>
