--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Desenvolvedor Front End & UX/UI Designer">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Renan Gabriel Lemos Araujo</title>
 </head>
@@ -124,14 +125,17 @@
         <div class="footer-container">
             <p class="footer-texto">Estou em constante aprendizado.</p>
             <ul class="footer-contato">
-                <li><img src="images/gmail.png" alt="Gmail" class="email"> renanlemos1612@gmail.com</li>
-                <li><img src="images/linkedin.png" alt="LinkedIn" class="linkedin"> LinkedIn</li>
-                <li><img src="images/instagram.png" alt="Instagram" class="instagram"><a href="https://instagram.com/renanleemos" target="_blank" rel="external">Instagram</a></li>
+                <li><img src="images/linkedin.png" alt="LinkedIn" class="linkedin"><a href="https://www.linkedin.com/in/renanleemos/" target="_blank" rel="external" class="link"> LinkedIn</a></li>
+                <li><img src="images/instagram.png" alt="Instagram" class="instagram"><a href="https://instagram.com/renanleemos" target="_blank" rel="external" class="link">Instagram</a></li>
+                <li><img src="images/github.png" alt="Instagram" class="github"><a href="https://github.com/renanleemos" target="_blank" rel="external" class="link">GitHub</a></li>
             </ul>
             <p class="footer-copy">Direitos reservados &copy;</p>
         </div>
     </footer>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 </body>
 
 </html>
