--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p class="experiencia-texto">Desenvolvo em <strong>HTML5</strong> & <strong>CSS3</strong>, realizo pequenos projetos com base nos aprendizados adquiridos em plataformas de ensino. Ainda em aprendizado no <strong>JavaScript</strong> e seus Frameworks. Interesse em Desenvolvimento Front End e <strong>UX/UI Design</strong>.</p>
 
             <div class="empresa">
-                <span class="empresa-ano">2017</span>
+                <span class="empresa-ano">2017 - 2018</span>
                 <h3 class="empresa-titulo">Unimed</h3>
                 <span class="empresa-titulo">Estagiário</span>
                 <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, prestei consultoria no Design.</p>
@@ -123,7 +123,7 @@
 
     <footer class="footer" id="contato">
         <div class="footer-container">
-            <p class="footer-texto">Estou em constante aprendizado.</p>
+            <p class="footer-texto">Programador e UX/UI Design em evolução.</p>
             <ul class="footer-contato">
                 <li><img src="images/linkedin.png" alt="LinkedIn" class="linkedin"><a href="https://www.linkedin.com/in/renanleemos/" target="_blank" rel="external" class="link"> LinkedIn</a></li>
                 <li><img src="images/instagram.png" alt="Instagram" class="instagram"><a href="https://instagram.com/renanleemos" target="_blank" rel="external" class="link">Instagram</a></li>
