--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
         <div class="footer-container">
             <p class="footer-texto">Programador e UX/UI Design em evolução.</p>
             <ul class="footer-contato">
-                <li><img src="images/linkedin.png" alt="LinkedIn" class="linkedin"><a href="https://www.linkedin.com/in/renanleemos/" target="_blank" rel="external" class="link"> LinkedIn</a></li>
-                <li><img src="images/instagram.png" alt="Instagram" class="instagram"><a href="https://instagram.com/renanleemos" target="_blank" rel="external" class="link">Instagram</a></li>
-                <li><img src="images/github.png" alt="Instagram" class="github"><a href="https://github.com/renanleemos" target="_blank" rel="external" class="link">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/renanleemos/" target="_blank" rel="external" class="link"> LinkedIn</a></li>
+                <li><a href="https://instagram.com/renanleemos" target="_blank" rel="external" class="link">Instagram</a></li>
+                <li><a href="https://github.com/renanleemos" target="_blank" rel="external" class="link">GitHub</a></li>
             </ul>
             <p class="footer-copy">Direitos reservados &copy;</p>
         </div>
