--- a/index.html
+++ b/index.html
@@ -27,53 +27,28 @@
         <img src="images/renan.png" alt="Renan">
         <div>
             <h1>Desenvolvedor <br>Front End & <br>UX/UI Designer</h1>
-            <p>Localizado em Porto Velho - Rondônia</p>
+            <p>Localizado em Porto Velho, Rondônia.</p>
         </div>
     </main>
 
     <section class="experiencia" id="experiencia" aria-label="Experiência">
         <h2 class="subtitulo">Experiência</h2>
         <div>
-            <p class="experiencia-texto">Desenvolvo em <strong>HTML5</strong> & <strong>CSS3</strong>, realizo pequenos projetos com base nos aprendizados adquiridos em plataformas de ensino. Ainda em aprendizado no <strong>JavaScript</strong> e seus Frameworks. Interesse em Desenvolvimento Front End e <strong>UX/UI Design</strong>.</p>
+            <p class="experiencia-texto">Desenvolvo em <strong>HTML5</strong> & <strong>CSS3</strong>, realizo pequenos projetos com base nos aprendizados adquiridos em plataformas de ensino. Ainda em aprendizado no <strong>JavaScript</strong> e seus Frameworks. Interesse em Desenvolvimento Front End e <strong>UX/UI Design.</strong> Ainda não possuo experiência no mercado de trabalho na área de programação, por isso, estou em busca de uma oportunidade para me desenvolver e aperfeiçoar minhas habilidades.</p>
 
             <div class="empresa">
                 <span class="empresa-ano">2017 - 2018</span>
                 <h3 class="empresa-titulo">Unimed</h3>
                 <span class="empresa-titulo">Estagiário</span>
-                <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, prestei consultoria no Design.</p>
-                <ul class="empresa-habilidades">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>UX Design</li>
-                    <li>UI Deisgn</li>
-                </ul>
+                <p class="empresa-texto">Manuseio de sistemas;
+                    <br>Atendimento a usuários;
+                </p>
             </div>
             <div class="empresa">
-                <span class="empresa-ano">2018-2019</span>
-                <h3 class="empresa-titulo">Madeira Soluções</h3>
-                <span class="empresa-titulo">Estagiário</span>
-                <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, prestei consultoria no Design.</p>
-                <ul class="empresa-habilidades">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>UX Design</li>
-                    <li>UI Deisgn</li>
-                </ul>
-            </div>
-            <div class="empresa">
-                <span class="empresa-ano">2019-2020</span>
-                <h3 class="empresa-titulo">Rovema Energia</h3>
-                <span class="empresa-titulo">Estagiário</span>
-                <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, prestei consultoria no Design.</p>
-                <ul class="empresa-habilidades">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>UX Design</li>
-                    <li>UI Deisgn</li>
-                </ul>
+                <span class="empresa-ano">2019-2022</span>
+                <h3 class="empresa-titulo">UzziPay</h3>
+                <span class="empresa-titulo">Analista de Sistemas N2</span>
+                <p class="empresa-texto">Suporte no manuseio de Sistemas; <br> Debugar Aplicações; <br> Análise de requisitos para desenvolvimento de Sistemas</p>
             </div>
         </div>
     </section>
@@ -83,18 +58,8 @@
             <h2 class="subtitulo">Formação</h2>
 
             <div>
-                <p class="formacao-texto">Minha mais recente experiência acadêmica foi o <strong> mestrado</strong> que fiz no exterior em <strong>UX Design</strong>. Além disso, me mantenho sempre atualizado com cursos intensivos online.</p>
+                <p class="formacao-texto">Atualmente estou <strong>Graduando</strong> na Faculdade Sapiens em <strong>Sistemas de Informação (7° Período)</strong>. Além disso, conforme há tempo livre, pratico com cursos intensivos online.</p>
                 <ul class="faculdade-lista">
-                    <li class="faculdade">
-                        <span class="faculdade-tipo">Bacharel</span>
-                        <h3 class="faculdade-curso">Sistemas de Informação</h3>
-                        <span class="faculdade-instituicao">Faculdade Sapiens</span>
-                    </li>
-                    <li class="faculdade">
-                        <span class="faculdade-tipo">Bacharel</span>
-                        <h3 class="faculdade-curso">Sistemas de Informação</h3>
-                        <span class="faculdade-instituicao">Faculdade Sapiens</span>
-                    </li>
                     <li class="faculdade">
                         <span class="faculdade-tipo">Bacharel</span>
                         <h3 class="faculdade-curso">Sistemas de Informação</h3>
@@ -106,8 +71,8 @@
                     <div class="cursos">
                         <h3>Cursos Intensivos</h3>
                         <ul>
-                            <li>UX/UI Design <span>56h</span></li>
-                            <li>Front End <span>72h</span></li>
+                            <li>Programação <span>10h</span></li>
+                            <li>Front-End <span>72h</span></li>
                         </ul>
                     </div>
                     <div class="idiomas">
@@ -123,7 +88,7 @@
 
     <footer class="footer" id="contato">
         <div class="footer-container">
-            <p class="footer-texto">Programador e UX/UI Design em evolução.</p>
+            <p class="footer-texto">Programador em evolução.</p>
             <ul class="footer-contato">
                 <li><a href="https://www.linkedin.com/in/renanleemos/" target="_blank" rel="external" class="link"> LinkedIn</a></li>
                 <li><a href="https://instagram.com/renanleemos" target="_blank" rel="external" class="link">Instagram</a></li>
