--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="empresa">
                 <span class="empresa-ano">2019-2022</span>
                 <h3 class="empresa-titulo">UzziPay</h3>
-                <span class="empresa-titulo">Analista de Sistemas N2</span>
+                <span class="empresa-titulo">Analista de Suporte</span>
                 <p class="empresa-texto">Suporte no manuseio de Sistemas; <br> Debugar Aplicações; <br> Análise de requisitos para desenvolvimento de Sistemas</p>
             </div>
         </div>
